tests/baselines/reference/classExtendingQualifiedName.errors.txt
==== tests/cases/compiler/classExtendingQualifiedName.ts (1 errors) ====
    module M {
        class C {
        }
    
        class D extends M.C {
                          ~
!!! error TS2094: The property 'C' does not exist on value of type 'M'.
        }
    }